--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://your-github-username.github.io/repository-name"
+  "homepage": "https://https://github.com/abhishekdevlooper/portfolio"
 
 
 }
