--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https:/github.com/abhishekdevlooper/portfolio"
+  "homepage": "https://github.com/abhishekdevlooper/portfolio"
 
 
 }
